[package]
name = "ss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
md-5 = "0.10.1"
rand = "0.8.5"
futures = "0.3"
structopt = "0.3.26"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]
